--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.12.2'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.2'
+    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.2'
+    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.2'
     // spring security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
@@ -37,6 +37,8 @@ dependencies {
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 }
 
 tasks.named('test') {
