--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
     runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.2'
