--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,15 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/project_ant?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mariadb://localhost:3306/project_ant?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 1234
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
     hibernate:
       ddl-auto: update
     defer-datasource-initialization: true
@@ -47,17 +47,18 @@ spring:
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
             client-name: Kakao
             client-authentication-method: client_secret_post
-            provider: kakao   # ✅ 명시적으로 연결
+            provider: kakao
 
           naver:
             client-id: 59itXn3Xv5ttJkZOI8Yn
             client-secret: lpbHZaYDqQ
             scope:
               - name
+              - email
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/naver"
             client-name: Naver
-            provider: naver   # ✅ 핵심 (provider와 registration 연결)
+            provider: naver
 
         provider:
           kakao:
